[gd_scene load_steps=18 format=3 uid="uid://er4koutkwewf"]

[ext_resource type="Script" uid="uid://bvdi75gvymrwo" path="res://Scenes/Characters/Boss/boss.gd" id="1_fh2qm"]
[ext_resource type="Texture2D" uid="uid://b7i0ybk26k87m" path="res://Images/Level/7-Boss/Discord_bos_sheet.png" id="2_5h2fr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qope3"]
size = Vector2(34, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8eyxj"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hffto"]
size = Vector2(8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7lc4"]
size = Vector2(5, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ghy3"]
size = Vector2(4.1690483, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh2qm"]
size = Vector2(6, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5h2fr"]
size = Vector2(4, 2)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qope3"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_5h2fr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tail:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ArmR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArmL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, -24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LegL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -8)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LegR:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -8)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -44)]
}

[sub_resource type="Animation" id="Animation_fh2qm"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tail:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ArmR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArmL:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, -24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LegL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -8)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LegR:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(11, -8)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -44)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Tail:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Torso:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ArmR:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ArmL:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LegL:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LegR:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Head:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Tail:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Torso:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("ArmR:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("ArmL:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("LegL:scale")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("LegR:scale")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Head:scale")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hffto"]
resource_name = "shoot_hand"
length = 4.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArmR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(13, -24), Vector2(13, -34), Vector2(13, -34), Vector2(13, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArmL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-14, -24), Vector2(-14, -34), Vector2(-14, -24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ArmR:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ArmL:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ArmR:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, -1), Vector2(1, -1), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ArmL:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 4.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, -1), Vector2(1, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.5, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet_R"
}, {
"args": [],
"method": &"shoot_bullet_L"
}, {
"args": [],
"method": &"shoot_bullet_R"
}, {
"args": [],
"method": &"shoot_bullet_L"
}]
}

[sub_resource type="Animation" id="Animation_d7lc4"]
resource_name = "spawn_enemies"
length = 1.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5707964, 3.1415927, 4.712389, 6.2831855]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_enemy"
}]
}

[sub_resource type="Animation" id="Animation_8eyxj"]
resource_name = "stomp"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-12, -8), Vector2(-12, -11), Vector2(-12, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LegR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, -8), Vector2(11, -8), Vector2(11, -11), Vector2(11, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8eyxj"]
_data = {
&"RESET": SubResource("Animation_5h2fr"),
&"idle": SubResource("Animation_fh2qm"),
&"shoot_hand": SubResource("Animation_hffto"),
&"spawn_enemies": SubResource("Animation_d7lc4"),
&"stomp": SubResource("Animation_8eyxj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eddsg"]
size = Vector2(91, 7)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_fh2qm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -22)
shape = SubResource("RectangleShape2D_qope3")

[node name="Tail" type="Area2D" parent="."]
modulate = Color(0.6171875, 0.6171875, 0.6171875, 1)
position = Vector2(2, -8)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tail"]
shape = SubResource("RectangleShape2D_8eyxj")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Tail"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(0, 0, 9, 16)

[node name="Torso" type="Area2D" parent="."]
position = Vector2(0, -21)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso"]
shape = SubResource("RectangleShape2D_hffto")

[node name="Sprite2D" type="Sprite2D" parent="Torso"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(10, 0, 16, 20)

[node name="ArmR" type="Area2D" parent="."]
position = Vector2(13, -24)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmR"]
rotation = -1.0485218
shape = SubResource("RectangleShape2D_d7lc4")

[node name="Sprite2D" type="Sprite2D" parent="ArmR"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(83, 0, 19, 15)

[node name="bullet_spawn" type="Node2D" parent="ArmR"]
position = Vector2(5, 5)

[node name="ArmL" type="Area2D" parent="."]
position = Vector2(-14, -24)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmL"]
position = Vector2(0, 1)
rotation = -2.112068
shape = SubResource("RectangleShape2D_d7lc4")

[node name="Sprite2D" type="Sprite2D" parent="ArmL"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(62, 0, 20, 15)

[node name="bullet_spawn" type="Node2D" parent="ArmL"]
position = Vector2(-5, 3)

[node name="LegL" type="Area2D" parent="."]
position = Vector2(-12, -8)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegL"]
position = Vector2(1, 1)
rotation = -2.3840342
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_2ghy3")

[node name="Sprite2D" type="Sprite2D" parent="LegL"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(27, 0, 17, 15)

[node name="hurt_player_area" type="Area2D" parent="LegL"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegL/hurt_player_area"]
position = Vector2(-5, 9)
shape = SubResource("RectangleShape2D_fh2qm")

[node name="LegR" type="Area2D" parent="."]
position = Vector2(11, -8)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegR"]
position = Vector2(1, 1)
rotation = 2.31237
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_2ghy3")

[node name="Sprite2D" type="Sprite2D" parent="LegR"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(45, 0, 16, 15)

[node name="hurt_player_area" type="Area2D" parent="LegR"]
position = Vector2(6, 8)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegR/hurt_player_area"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_5h2fr")

[node name="Head" type="Area2D" parent="."]
position = Vector2(0, -44)
collision_layer = 0
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_qope3")

[node name="Sprite2D" type="Sprite2D" parent="Head"]
texture = ExtResource("2_5h2fr")
region_enabled = true
region_rect = Rect2(103, 0, 14, 31)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8eyxj")
}
autoplay = "idle"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="StompArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(0.5, -4)
shape = SubResource("RectangleShape2D_eddsg")

[connection signal="body_entered" from="LegL/hurt_player_area" to="." method="_on_hurt_player_area_body_entered"]
[connection signal="body_entered" from="LegR/hurt_player_area" to="." method="_on_hurt_player_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="StompArea" to="." method="_on_stomp_area_body_entered"]
[connection signal="body_exited" from="StompArea" to="." method="_on_stomp_area_body_exited"]
